<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.mycompany.app</groupId>
   <artifactId>my-app</artifactId>
   <version>1.0-SNAPSHOT</version>
   <properties>
      <jmh.version>1.22</jmh.version>
      <maven.compiler.target>13</maven.compiler.target>
      <maven.compiler.source>13</maven.compiler.source>
   </properties>
   <repositories>
      <repository>
         <id>central</id>
         <name>bintray</name>
         <url>https://jcenter.bintray.com</url>
      </repository>
   </repositories>
   <dependencies>
      <dependency>
         <groupId>org.openjdk.jmh</groupId>
         <artifactId>jmh-core</artifactId>
         <version>${jmh.version}</version>
      </dependency>
      <dependency>
         <groupId>org.openjdk.jmh</groupId>
         <artifactId>jmh-generator-annprocess</artifactId>
         <version>${jmh.version}</version>
      </dependency>
      <dependency>
         <groupId>com.typesafe.akka</groupId>
         <artifactId>akka-actor_2.13</artifactId>
         <version>2.6.1</version>
      </dependency>
      <dependency>
         <groupId>com.github.zakgof</groupId>
         <artifactId>actr</artifactId>
         <version>0.3.2</version>
      </dependency>
   </dependencies>
   <build>
      <plugins>
         <plugin>
            <groupId>org.codehaus.mojo</groupId>
            <artifactId>exec-maven-plugin</artifactId>
            <version>1.4.0</version>
            <configuration>
               <mainClass>com.zakgof.aab.JmhMain</mainClass>
               <arguments>
                  <argument>--enable-preview</argument>
               </arguments>
            </configuration>
         </plugin>
         <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-compiler-plugin</artifactId>
            <version>3.8.0</version>
            <configuration>
                <release>13</release>
                <compilerArgs>--enable-preview</compilerArgs>
            </configuration>
         </plugin>
         <plugin>
            <groupId>org.codehaus.mojo</groupId>
            <artifactId>build-helper-maven-plugin</artifactId>
            <executions>
               <execution>
                  <phase>generate-sources</phase>
                  <goals>
                     <goal>add-source</goal>
                  </goals>
                  <configuration>
                     <sources>
                        <source>src/main/java</source>
                        <source>src/jmh/java</source>
                     </sources>
                  </configuration>
               </execution>
            </executions>
         </plugin>
      </plugins>
   </build>
</project>